enviando projeto da clínica
Acabei de concluir meu primeiro projeto mais elaborado, onde criei um site para um consultório de odontologia fictício.

--- a/projeto_clinica/template.html
+++ b/projeto_clinica/template.html
@@ -11,14 +11,20 @@
     <div class="wrapper">
         <div class="menu">
             <!-- Aqui vai o seu menu -->
+            <h1>Menu:</h1>
             <ul>
-                <li><a href="#">Link</a></li>
+                <li><a href="#">Página Principal</a></li>
+                <li><a href="sobre.html">Sobre nós</a></li>
+                <li><a href="horario.html">Horários de Atendimento</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </div>
 
         <div class="main">
             <div class="header">
-                Header
+
+                <img src="logo.png" alt="logo" width="120">
+                <img src="banner.png" alt="Banner da clínica Odontomed" width="550">
                 <!-- Aqui vai o seu header -->
             </div>
     
