--- a/projeto_clinica/dentistas.html
+++ b/projeto_clinica/dentistas.html
@@ -31,9 +31,14 @@
             </ul>
             <hr>
             <h1 class="titulo-menu">Localização:</h1>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14709.431186166257!2d-47.0706648!3d-22.8262484!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8c6b0861ec839%3A0xbc6f9b343e9457d!2sRep%C3%BAblica%20Praieiro!5e0!3m2!1spt-BR!2sbr!4v1706282696528!5m2!1spt-BR!2sbr" width="175" height="175" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14709.354453804903!2d-47.064116!3d-22.8269585!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8c6a5b78fb801%3A0x669a84e17a137788!2sHospital%20de%20Cl%C3%ADnicas!5e0!3m2!1spt-BR!2sbr!4v1706506304949!5m2!1spt-BR!2sbr" width="175" height="175" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+            <hr>
 
 
+            <img src="insta.jpg" height = "50">
+            <img src="whats.jpg" height = "50">
+            <img src="maps.jpg" height = "50">
         </div>
 
         <div class="main">
@@ -46,7 +51,7 @@
             </div>
     
             <div class="content">
-                <h1>Nossos Dentistas</h1>
+                <h1 class="titulo-principal" >Nossos Dentistas</h1>
                 <ul>
                     <li><h2>Dr. Daniel Cheng (Implantodontista)</h2></li>
                         <img src="dr_cheng.jpeg" alt="Dr. Daniel é especialista em implantes de todos os tipos,incluindo próteses dentárias." width= "400">
