--- a/projeto_clinica/odonto_med.html
+++ b/projeto_clinica/odonto_med.html
@@ -12,7 +12,7 @@
         <div class="menu">
             <!-- Aqui vai o seu menu -->
             <h1 class="titulo-menu">Menu:</h1>
-            <ul>
+            <ul class = "itens-menu">
                 <li><a href="odonto_med.html" title="Página principal.">Página Principal</a></li>
                 <li><a href="sobre.html" title="Conheça nossa história.">Sobre nós</a></li>
                 <li><a href="horario.html" title="Confira a nossa grade de horários disponíveis.">Horários de Atendimento</a></li>
